Refactor DTOs and Service methods to enhance validation and error handling; replace exceptions with Result type for better error management.